--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[![Build Status](https://travis-ci.org/Automattic/_s.svg?branch=master)](https://travis-ci.org/Automattic/_s)",
   "main": "index.js",
   "devDependencies": {
-    "assets-webpack-plugin": "^3.5.1",
+    "assets-webpack-plugin": "^3.9.10",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
@@ -27,6 +27,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "browser-sync": "^2.26.5",
     "npm": "^6.9.0",
     "svg-loader": "0.0.2",
