--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mercado",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "[![Build Status](https://travis-ci.org/Automattic/_s.svg?branch=master)](https://travis-ci.org/Automattic/_s)",
   "main": "index.js",
   "devDependencies": {
@@ -9,26 +9,26 @@
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "browser-sync-webpack-plugin": "^2.0.1",
-    "css-loader": "^2.1.1",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^3.0.1",
+    "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "node-sass": "^4.12.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1",
-    "webpack": "^3.12.0"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack -p --mode development",
-    "build": "NODE_ENV=production webpack -p",
+    "build": "NODE_ENV=production webpack",
     "watch": "NODE_ENV=development webpack --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "browser-sync": "^2.26.7",
-    "npm": "^6.10.3",
+    "browser-sync": "^2.29.3",
     "svg-loader": "0.0.2",
     "svg-url-loader": "^2.3.3"
   }
