--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^6.0.7",
+    "sass": "^1.77.1",
+    "sass-loader": "^8.0.2",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1",
     "webpack": "^5.88.2",
