--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack -p --mode development",
-    "build": "NODE_ENV=production webpack",
+    "dev": "webpack --mode=development",
+    "build": "NODE_ENV=production webpack --mode=production",
     "watch": "NODE_ENV=development webpack --watch"
   },
   "author": "",
